# computer_vision_rs

./: .gitignore  235.index.js  Cargo.toml  build_web.bat  build_web.sh  computer_vision_rs.js  computer_vision_rs_bg.wasm  index.html  index.js  package-lock.json  package.json  pkg_index_js.index.js  service-worker.js  setup_web.sh  start_server.sh  sw.js
.github/workflows/: cicd.yml  deploy-gh-pages.yml  publish-to-github-pages.yml  rust.yml
backend/: Cargo.toml  rust-toolchain.toml
backend/src/: lib.rs
docs/: computer_vision_rs.js  computer_vision_rs_bg.wasm
src/: app.rs  lib.rs  main.rs
src/app/: image_frame.rs  mod.rs
src/app/modal/: mod.rs  open_file_dialog.rs
src/app/model/: backend.rs  image.rs  image_service.rs  mod.rs  operations.rs
src/app/panels/: mod.rs  top.rs
src/app/view/: central_panel.rs  image_frame.rs  mod.rs  top_panel.rs
src/app/viewmodel/: image_frame.rs  mod.rs  top_panel.rs
www/: index.html  index.js  package-lock.json  package.json  wasm-worker.js  webpack.config.js
www/static/: manifest.json
