[package]
name = "computer_vision_rs"
default-run = "computer_vision_rs_bin"
version = "0.1.0"
authors = ["Tim Hopp <tim11071992@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "computer_vision_rs_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.18.0", features = ["persistence"] }
egui = "0.18.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm

