[package]
name = "computer_vision_rs"
default-run = "computer_vision_rs_bin"
version = "0.1.0"
authors = ["Tim Hopp <tim11071992@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "computer_vision_rs_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arc-swap = "1.5.0"
eframe = { version = "0.18.0", features = ["persistence"] }
egui = "0.18.0"
egui_extras = { version = "0.18.0", features = ["image"] }
image = { version = "0.24.2", features = ["jpeg", "png"] }
rfd = "0.9.1"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tokio = { version = "1.20.0", features = ["sync"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.21"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.31"

[profile.release]
opt-level = 2 # fast and small wasm

